fix naming typo